-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0 Beta
-
None
-
183d04de908c4d759a823bb45dce142a6de15437 (qtbase), e89e9825cc47a02a195f41fb44a8d09e0ec1a84d (qtdeclarative)
In b0783c21fb54b939f07ddf5658cc51113b8014e6 a few changes was made to the way selection is handled in the scene graph. When combined with 198009db79a85d3cab7fe3a6432635d36123a2d6 in qtbase this revealed some bugs, reproducible e.g. by running the textedit_multiline_hebrew_selected.qml test in the Lancelot test suite.
The change in qtbase probably just changed the parameters a bit and revealed a latent bug.